# matrix

./: .gitignore  CMakeLists.txt  README.md  matrixConfig.h.in
include/matrix/: libmatrix.hpp  libmatrix_decl.hpp  matrix.hpp  matrixExceptions.hpp
includes/matrix/: libmatrix.hpp  matrix.hpp  matrixExceptions.hpp
matrix/: libmatrix.hpp  matrix.hpp
test/: CMakeLists.txt  mtest2.cpp
